@@ -28,6 +28,7 @@
 * NMI: Set ACH sec_code from options if present [curiousepic]
 * VisaNet Peru: Refactor merchant_id and purchase_number handling [shasum]
 * Braintree Blue: Pass descriptor_url field [curiousepic]
+* VisaNet Peru: Add merchant_define_data option [duff]
 
 
 == Version 1.58.0 (March 1, 2016)
